<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/bonded_device" android:title="@string/bonded_device"
        android:orderInCategory="100" app:showAsAction="ifRoom|withText" />

    <item android:id="@+id/enable_visiblity" android:title="@string/visiblity"
        android:orderInCategory="100" app:showAsAction="ifRoom|withText" />

    <item android:id="@+id/find_device" android:title="@string/find_device"
        android:orderInCategory="100" app:showAsAction="ifRoom|withText" />


    <!--<item android:id="@+id/listening" android:title="@string/waiting"-->
        <!--android:orderInCategory="100" app:showAsAction="always|withText" />-->

    <!--<item android:id="@+id/stop_listening" android:title="@string/stop_waiting"-->
        <!--android:orderInCategory="100" app:showAsAction="always|withText" />-->

    <item android:id="@+id/disconnect" android:title="@string/disconnect"
        android:orderInCategory="100" app:showAsAction="ifRoom|withText" />

    <item android:id="@+id/say_hi_to_test" android:title="@string/send_mesg"
        android:orderInCategory="100" app:showAsAction="ifRoom|withText" />

    <item android:id="@+id/say_hi_to_real" android:title="@string/hi"
        android:orderInCategory="100" app:showAsAction="ifRoom|withText" />
</menu>
