<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        layout="@layout/main_tool_bar"
        android:id="@+id/main_tool_bar"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        >

        <Button
            android:id="@+id/btn_instruction1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_margin="30dp"
            android:textSize="25dp"
            android:padding="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/calibration_inst1"
            android:textColor="@color/color_black" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/calibration_inst2"
            android:id="@+id/btn_instruction2"
            android:padding="10dp"
            android:gravity="center_vertical"
            android:layout_margin="30dp"
            android:textSize="25dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/inactive_color"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/calibration_inst3"
            android:id="@+id/btn_instruction3"
            android:layout_margin="30dp"
            android:textSize="25dp"
            android:padding="10dp"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical"

            android:textColor="@color/inactive_color"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">
        <Button
            android:layout_width="250dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:background="@color/primary_color"
            android:text="Collect EMG Data"
            android:id="@+id/btn_calibration_start"
            android:textColor="@color/button_color"
            android:textSize="20dp"

            />
    </LinearLayout>

</LinearLayout>
